# monad-future

./: monad-future.cabal
Control/Monad/: Future.hs
Control/Monad/Future/: Async.hs  Class.hs  Sync.hs
Data/Future/: Event.hs  Result.hs
Data/Future/Event/: PEvent.hs
